@@ -1,4 +1,4 @@
-NDN-IND (2021-07-23)
+NDN-IND (2021-08-20)
 --------------------
 
 Changes
@@ -19,6 +19,7 @@ Changes
 * Support multiple access managers in NAC. https://github.com/operantnetworks/ndn-ind/pull/25
 * Support X509 certificate format and validation https://github.com/operantnetworks/ndn-ind/pull/35
 * Support X509 CRL format https://github.com/operantnetworks/ndn-ind/pull/46
+* Add X509CrlFetcher and update the Validator to check for revocation https://github.com/operantnetworks/ndn-ind/pull/48
 * In Interest, changed the MustBeFresh default value to false.
 * Added Tlv0_3WireFormat.
 * In Face, also check for a Unix socket at /var/tmp/nfd.sock .
